# Tracking_PyModule

./: .gitignore  CMakeLists.txt  README.md  test.py
include/: tracking.h
src/: pymodule.cpp  tracking.cpp
